borsh/tests/snapshots/test_btree_map__1_element_btreemap.snap
---
source: borsh/tests/test_btree_map.rs
expression: data
---
[
    1,
    0,
    0,
    0,
    3,
    0,
    0,
    0,
    111,
    110,
    101,
    7,
    0,
    0,
    0,
    101,
    108,
    101,
    109,
    101,
    110,
    116,
]
