borsh/tests/snapshots/test_btree_map__2_element_btreeset.snap
---
source: borsh/tests/test_btree_map.rs
expression: data
---
[
    2,
    0,
    0,
    0,
    9,
    0,
    0,
    0,
    100,
    105,
    102,
    102,
    101,
    114,
    101,
    110,
    116,
    3,
    0,
    0,
    0,
    111,
    110,
    101,
]
