borsh/tests/snapshots/test_btree_map__default_btreeset.snap
---
source: borsh/tests/test_btree_map.rs
expression: data
---
[
    6,
    0,
    0,
    0,
    9,
    0,
    0,
    0,
    100,
    105,
    102,
    102,
    101,
    114,
    101,
    110,
    116,
    3,
    0,
    0,
    0,
    102,
    111,
    111,
    4,
    0,
    0,
    0,
    107,
    101,
    121,
    115,
    4,
    0,
    0,
    0,
    109,
    97,
    110,
    121,
    3,
    0,
    0,
    0,
    111,
    110,
    101,
    7,
    0,
    0,
    0,
    118,
    97,
    114,
    105,
    111,
    117,
    115,
]
